# wire

./: .codecov.yml  .contributebot  .dockerignore  .gitignore  .goreleaser.yml  .travis.yml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  README.md  WORKSPACE  exports.go  go.mod  go.sum  goose.go  main.go  wire.go
cmd/wire/: BUILD.bazel  main.go  main_test.go
internal/wire/: BUILD.bazel  analyze.go  copyast.go  errors.go  parse.go  wire.go  wire_test.go
internal/wire/testdata/AsyncFunc/bar/: bar.go
internal/wire/testdata/AsyncFunc/baz/: baz.go
internal/wire/testdata/AsyncFunc/foo/: foo.go  wire.go
internal/wire/testdata/AsyncFunc/want/: wire_gen.go
internal/wire/testdata/AsyncProvider/bar/: bar.go
internal/wire/testdata/AsyncProvider/foo/: foo.go  wire.go
internal/wire/testdata/AsyncProvider/want/: wire_gen.go
internal/wire/testdata/AsyncProviderErrHandling/bar/: bar.go
internal/wire/testdata/AsyncProviderErrHandling/foo/: foo.go  wire.go
internal/wire/testdata/AsyncProviderErrHandling/want/: program_out.txt  wire_gen.go
internal/wire/testdata/AsyncProviderSharedDependency/bar/: bar.go
internal/wire/testdata/AsyncProviderSharedDependency/baz/: baz.go
internal/wire/testdata/AsyncProviderSharedDependency/foo/: foo.go  wire.go
internal/wire/testdata/AsyncProviderSharedDependency/want/: wire_gen.go
internal/wire/testdata/BindInjectorArg/foo/: foo.go  wire.go
internal/wire/testdata/BindInjectorArg/want/: wire_errs.txt  wire_gen.go
internal/wire/testdata/BindInjectorArgPointer/foo/: wire.go
internal/wire/testdata/BindInjectorArgPointer/want/: wire_gen.go
internal/wire/testdata/BuildTagsRelativePkg/: pkg
internal/wire/testdata/Chain/foo/: foo.go  (+1 more)
internal/wire/testdata/Cycle/: out.txt
internal/wire/testdata/EmptyVar/: out.txt
internal/wire/testdata/Generic/: pkg
internal/wire/testdata/InjectInputConflict/: out.txt
internal/wire/testdata/ModeOverride/: mode
internal/wire/testdata/MultipleMissingInputs/: out.txt
internal/wire/testdata/NoImplicitInterface/: out.txt
internal/wire/testdata/Struct/: out.txt
internal/wire/testdata/UnexportedValue/: out.txt
internal/wire/testdata/UnusedProviders/: out.txt
release/linux/amd64/: BUILD.bazel
(+333 files in other folders)
