load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/google/wire
gazelle(name = "gazelle")

go_library(
    name = "wire_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/wire",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/wire",
        "@com_github_google_subcommands//:subcommands",
        "@com_github_pmezard_go_difflib//difflib",
        "@org_golang_x_tools//go/types/typeutil",
    ],
)

go_binary(
    name = "wire",
    embed = [":wire_lib"],
    visibility = ["//visibility:public"],
)
